implemented login and crud operations for complaints

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,11 @@
 
 
 {% block body %}
-<h1>About Us</h1>
-<p>This app was made as a task for MAD Club TSEC Membership Team by Kavish Shah (F.E.)</p>
-<p>App Version: v0.1.0</p>
+<div class="text-white text-center">
+    <h1>About This App</h1>
+    <p>This app lets you register complaints for Thadomal Shahani Engineering College</p>
+    <p>Made by <a href="https://www.linkedin.com/in/kavish-shah-501b32192/"
+            style="color: white; text-decoration: underline;">Kavish Shah</a></p>
+    <p>App Version: v0.1.0</p>
+</div>
 {% endblock %}
