--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="bg-dark" style="height: 100vh;">
 		{% include 'includes/_navbar.html' %}
-
+		{% include 'includes/_messages.html' %}
 		{% block body %}{% endblock %}
 	</div>
 
@@ -26,6 +26,10 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		crossorigin="anonymous"></script>
+	<script src="//cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
+	<script type="text/javascript">
+		CKEDITOR.replace('editor')
+	</script>
 </body>
 
 </html>
